removed mounting code and cleanup the gdown code cell

--- a/Cats_and_Dogs.ipynb
+++ b/Cats_and_Dogs.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ilmiyoon/csc308Projects/blob/main/Cats_and_Dogs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ilmiyoon/csc308Projects/blob/testing-shared-data-files/Cats_and_Dogs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -99,32 +99,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Uurm_DILF8y0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5f1a6b97-5af4-4585-a4f1-bab0da22a421"
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "!ls /content/drive"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "MyDrive  Shareddrives\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "1n12AVbosJon"
@@ -139,7 +113,15 @@
         "id": "Xu_djud2KBi9"
       },
       "source": [
-        ""
+        "!pip install gdown --quiet\n",
+        "import gdown\n",
+        "url = 'https://drive.google.com/uc?id=1eibeg6ZKWDehQBFf6apFy82nMiUQhVO5'\n",
+        "\n",
+        "output = 'dogs-vs-cats-images.zip'\n",
+        "gdown.download(url, output, quiet=True)\n",
+        "\n",
+        "!unzip dogs-vs-cats-images.zip\n",
+        "print(\"Done.\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -154,16 +136,6 @@
         "outputId": "3960e2fb-1592-41da-df44-f3de08d60927"
       },
       "source": [
-        "!pip install gdown --quiet\n",
-        "import gdown\n",
-        "url = 'https://drive.google.com/uc?id=1eibeg6ZKWDehQBFf6apFy82nMiUQhVO5'\n",
-        "\n",
-        "output = 'dogs-vs-cats-images.zip'\n",
-        "gdown.download(url, output, quiet=True)\n",
-        "\n",
-        "!unzip dogs-vs-cats-images.zip\n",
-        "print(\"Done.\")\n",
-        "\n",
         "train_path = 'dogs-vs-cats/train'\n",
         "valid_path = 'dogs-vs-cats/valid'\n",
         "test_path = 'dogs-vs-cats/test'"
